# 07-iml

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01. Knowledge Injection in ML.ipynb  02. Knowledge Injection via Lagrangian Approaches.ipynb  03. Knowledge Injection via Lagrangians for RUL estimation.ipynb  04. Learning ODEs.ipynb  05. Better Learning for ODEs.ipynb  06. Universal Ordinary Differential Equations.ipynb  07. From UDEs to PINNs.ipynb
notebooks/util/: util.py
